# isimplify

./: README.md  pyproject.toml
isimplify/: __init__.py  app.py  dataIngestion.py  sentimentAnalysis.py  wordCount.py
