[tool.poetry]
name = "isimplify"
version = "0.1.9"
description = "simplifies word counting"
authors = ["sunny kumar <sunnykumar1516@gmail.com>"]
readme = "README.md"
packages = [{include = "isimplify"}
            ]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
nltk = "^3.9.1"
huggingface = "^0.0.1"
transformers = "^4.46.3"
pypdf2 = "^3.0.1"
gradio = "^5.7.1"
spacy = "^3.8.2"
matplotlib = "^3.9.3"
torch = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
